# spotify-etl

./: README.md  pyproject.toml
src/spotify_etl/: main.py  utils.py
